...
    <string name="my_page_edit_name_finish">완료</string>
    <string name="my_page_edit_name_guide">닉네임을 입력하세요</string>
    <string name="my_page_edit_name_redundant_warning">동일 닉네임의 유저가 존재합니다.\n다른 닉네임을 입력해 주세요.</string>
    <string name="my_page_kakao_channel_inquiry">카카오톡 채널 문의</string>
    <string name="my_page_history_no_history">아직 러닝 기록이 없어요!\n코스를 그리고 달려보세요</string>
    <string name="history_delete">삭제하기</string>
    <string name="login_visitor_mode"><u>회원가입 없이 둘러보기</u></string>
    <string name="my_page_upload_no_course">아직 업로드한 코스가 없어요!\n내가 그린 코스를 공유해보세요</string>
    <string name="my_page_upload">코스 업로드하기</string>
    <string name="upload_delete">삭제하기</string>
    <string name="history_edit_finish">완료</string>
    <string name="my_setting_account_info">계정 정보</string>
    <string name="my_setting_report">문의 및 신고하기</string>
...
